=======
CHANGES
=======

3.7.4 (unreleased)
------------------

- Added ``zcml`` extra dependencies, run related tests only if
  ``zope.configuration`` is available.

- Run tests related to the ``untrustedpython`` functionality only if
  ``RestrictedPython`` is available.

3.7.3 (2010-04-30)
------------------

- Prefer the standard libraries doctest module to the one from zope.testing.

- Fixed directlyProvides IVocabularyFactory for PermissionIdsVocabulary in
  Python code, even if it's unnecessary because IVocabularyFactory is provided
  in zcml.

- Removed the dependency on the zope.exceptions package: zope.security.checker
  now imports ``DuplicationError`` from zope.exceptions if available, otherwise
  it defines a package-specific ``DuplicationError`` class which inherits from
  Exception.


3.7.2 (2009-11-10)
------------------

- Added compatibility with Python 2.6 abstract base classes.


3.7.1 (2009-08-13)
------------------

- Fix for LP bug 181833 (from Gustavo Niemeyer). Before "visiting" a
  sub-object, a check should be made to ensure the object is still valid.
  Because garbage collection may involve loops, if you garbage collect an
  object, it is possible that the actions done on this object may modify the
  state of other objects. This may cause another round of garbage collection,
  eventually generating a segfault (see LP bug). The Py_VISIT macro does the
  necessary checks, so it is used instead of the previous code.


3.7.0 (2009-05-13)
------------------

- Made ``pytz`` a soft dependency:  the checker for ``pytz.UTC`` is
  created / tested only if the package is already present.  Run
  ``bin/test_pytz`` to run the tests with ``pytz`` on the path.


3.6.3 (2009-03-23)
------------------

- Ensure that simple zope.schema's VocabularyRegistry is used for
  PermissionVocabulary tests, because it's replaced implicitly in
  environments with zope.app.schema installed that makes that tests
  fail.
